--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,49 @@ header.home {
 }
 
 /* ********** End Animation ********** */
+
+
+/* .models {
+    height: 100vh;
+    width: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #00000050;
+    
+}
+
+.models .video {
+    height: 75%;
+    width: 90%;
+    position: relative;
+}
+
+.models .video .close-video {
+    height: 30px;
+    width: 30px;
+    padding: 3px;
+    border-radius: 50%;
+    font-size: 18px;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    color: white;
+    cursor: pointer;
+    background-color: red;
+    z-index: 5;
+}
+
+.models .img video {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+[data-getVideo] {
+    cursor: pointer;
+} */
